@@ -1,6 +1,7 @@
 Revision history for CPAN-Meta-Prereqs-Filter
 
 {{$NEXT}}
+          s/sanatize/sanitize/
 
 0.001     2015-02-25 01:18:50+01:00 Europe/Amsterdam
           Initial release to an unsuspecting world
